test/sema/mismatching-switch-case-value-type.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

void main() {
    switch (1) {
        // CHECK: [[@LINE+1]]:14: error: case value type 'bool' doesn't match switch condition type 'int'
        case false: break;
    }
}
